--- a/quick-rogue.html
+++ b/quick-rogue.html
@@ -2,6 +2,14 @@
 <head>
 </head>
 <body>
+<p>You are an intrepid adventurer (P), one day, while doing whatever adventurers
+do, you fell in a cave. What you want is simple reach the exit (X), but the cave
+is filled with nasty creatures (E), beings (E), things (E) wanting your skin.</p>
+<p>Make your way to the exit, walk directly toward an enemy to kill it. But
+careful, would you arrive next to an enemy, it will happily bite you and you
+will end up losing a <3....
+</p>
+<p>Good luck</p>
 <pre id="myCanvas"></pre>
 <button id="up">Up</button>
 <button id="down">Down</button>
